# harbormaster

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
examples/: secure_inference.py
src/harbormaster/: init.py
src/harbormaster/api/: main.py
src/harbormaster/api/middleware/: security.py
src/harbormaster/api/routes/: model_routes.py
src/harbormaster/api/routes/middleware/: security.py
src/harbormaster/cli/: commands.py
src/harbormaster/core/config/: settings.py
src/harbormaster/dashboard/components/: monitoring.py
src/harbormaster/huggingface/adapters/: model_adaptor.py
src/harbormaster/huggingface/adapters/endpoints/: inference.py
src/harbormaster/security/defenders/: rate_limiter.py
src/harbormaster/security/scanners/: prompt_scanner.py
src/harbormaster/services/: model_adapter.py  secure_inference.py
tests/integration/: test_security.py
tests/unit/: test_scanners.py
